--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -44,7 +44,7 @@
       </div>
       <div id="div_id_password2" class="form-group"> <label for="id_password2" class=" requiredField">
           Password (re-type)<span class="asteriskField">*</span> </label>
-        <div> <input type="password" name="password2" placeholder="Password (again)" autocomplete="new-password"
+        <div> <input type="password" name="password2" placeholder="Password (re-type)" autocomplete="new-password"
             class="textinput textInput form-control" required id="id_password2"> </div>
       </div>
   
