--- a/templates/base.html
+++ b/templates/base.html
@@ -43,16 +43,17 @@
     {% endblock %}
 
     {% block corejs %}
-    <!-- Font Awesome -->
-    <script defer src="https://kit.fontawesome.com/aec9602b9e.js"></script>
-    <!-- Owl Carousel -->
-    <script defer src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <!-- Stripe -->
-    <script src="https://js.stripe.com/v3/"></script>
+    
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/aec9602b9e.js" defer></script>
+    <!-- Owl Carousel -->
+    <script src="{% static 'js/owl.carousel.min.js' %}" defer></script>
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
     <title>Hanneles Art Gallery & Academy</title>
