Replace h5 tags with div tags in templates

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>Original Art by Hannele</h2>
+                    <h2 class="text-white">Original Art by Hannele</h2>
                     <h3 class="text-white">Buy real paintings for home decoration</h3>
                 </div>
             </div>
@@ -146,7 +146,7 @@
         </div>
     </div>
     <div class="back-to-top" data-toggle="tooltip" data-original-title="Back to Top">
-        <a class="btt-link h-100" href="{% url 'products' %}" onclick="javascript:scrollTo(0, 0)">
+        <a class="btt-link h-100" aria-label="Back to Top" href="{% url 'products' %}" onclick="javascript:scrollTo(0, 0)">
             <i class="fa-regular fa-circle-up"></i>
         </a>
     </div>
