--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -8,7 +8,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="breadcrumb_iner">
-          <h2>Your shopping cart</h2>
+          <h2 class="text-white">Your shopping cart</h2>
         </div>
       </div>
     </div>
