--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>Checkout</h2>
+                    <h2 class="text-white">Checkout</h2>
                 </div>
             </div>
         </div>
