--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="breadcrumb_iner">
-          <h2>Thank You!</h2>
+          <h2 class="text-white">Thank You!</h2>
         </div>
       </div>
     </div>
