--- a/contact/templates/contact/contact_us.html
+++ b/contact/templates/contact/contact_us.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>Contact us</h2>
+                    <h2 class="text-white">Contact us</h2>
                 </div>
             </div>
         </div>
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-12 col-lg-6 order-lg-last mb-5 mx-auto">
                 <div class="text-muted">
-                <h5 id="h5-padding">Please complete the form:</h5>
+                <div class="form-titel-text">Please complete the form:</div>
                 </div>
                 <form action="{% url 'contact' %}" method="POST">
                     {% csrf_token %}
