--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -31,7 +31,7 @@
         <div class="col-lg-12">
             <div class="breadcrumb_iner text-center">
                 <a href="{% url 'reviews' %}">
-                    <h2 class="review_heading">What our customers say</h2>
+                    <h2>What our customers say</h2>
                 </a>
             </div>
         </div>
