--- a/home/templates/home/reviews.html
+++ b/home/templates/home/reviews.html
@@ -8,7 +8,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="breadcrumb_iner">
-          <h2>What our customers say</h2>
+          <h2 class="text-white">What our customers say</h2>
           <h3 class="text-white">Average customer rating: {{ average_rating.rating|floatformat:1 }} out of 5.0</h3>
         </div>
       </div>
@@ -25,8 +25,8 @@
 <div class="container p-3 mt-2">
   <div class="col">
     {% if user.is_anonymous %}
-    <h5 class="review_heading">Please <a href="{% url 'account_login' %}"><strong>log in</strong></a> to add a review.
-    </h5>
+    <div class="review_heading">Please <a href="{% url 'account_login' %}"><strong>log in</strong></a> to add a review.
+    </div>
     {% endif %}
     {% if request.user.is_authenticated %}
     {% if add_review %}
