--- a/newsletter/templates/newsletter/mailcontent.html
+++ b/newsletter/templates/newsletter/mailcontent.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>Create a newsletter</h2>
+                    <h2 class="text-white">Create a newsletter</h2>
                 </div>
             </div>
         </div>
