--- a/newsletter/templates/newsletter/unsubscribe.html
+++ b/newsletter/templates/newsletter/unsubscribe.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>Unsubscribe from Newsletter</h2>
+                    <h2 class="text-white">Unsubscribe from Newsletter</h2>
                 </div>
             </div>
         </div>
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-12 col-lg-6 order-lg-last mb-5 mx-auto">
                 <div class="text-muted">
-                <h5 id="h5-padding">Enter your email address:</h5>
+                <div class="form-titel-text">Enter your email address:</div>
                 </div>
                 <form action="{% url 'unsubscribe' %}" method="POST">
                     {% csrf_token %}
