--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>Product Management</h2>
+                    <h2 class="text-white">Product Management</h2>
                 </div>
             </div>
         </div>
