--- a/products/templates/products/delete_product.html
+++ b/products/templates/products/delete_product.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>Hanneles Art Gallery</h2>
+                    <h2 class="text-white">Hanneles Art Gallery</h2>
                     <h3 class="text-white">Delete product</h3>
                 </div>
             </div>
