--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6 order-lg-last mb-5">
-                <h2 class="mt-20">Update a painting</h2>
+                <h2 class="mt-20 text-white">Update a painting</h2>
                 <hr>
             </div>
         </div>
