--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>My Profile</h2>
+                    <h2 class="text-white">My Profile</h2>
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="col-12 col-lg-5 order-lg-last mb-5">
                 <p class="text-muted">
-                    <h5 id="h5-padding">Your Profile:</h5>
+                    <div class="form-titel-text">Your Profile:</div>
                 </p>
                 <form action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
@@ -40,7 +40,7 @@
             </div>
             <div class="col-12 col-lg-7 order-lg-last mb-5">
                 <p class="text-muted">
-                    <h5 id="h5-padding">Order History:</h5>
+                    <div class="form-titel-text">Order History:</div>
                 </p>
                 <div class="order-history table-responsive ml-2">
                     <table class="table table-sm table-borderless table-hover">
