Correct minor html code issues after validation, update readme with new screenshots of validation

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -86,3 +86,11 @@ select option[value=""] {
 .fas fa-chevron-left {
   color: #fff !important;
 }
+.form-titel-text {
+  font-size: 1rem !important;
+  font-weight: 500 !important;
+  color: #795376 !important;
+}
+.confirmation_part .single_confirmation_details {
+  background-color: #ede5ed70 !important;
+}
