--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -17,11 +17,11 @@
 </section>
 <!-- Breadcrumb part end-->
 <!-- Checkout Area Start -->
-<section class="cart_area section_padding">
+<div class="cart_area section_padding">
 <div class="container">
     <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
-            <h5>Add a painting</h5>
+            <div class="form-titel-text">Add a painting</div>
             <hr>          
         </div>
     </div>
@@ -44,7 +44,7 @@
         </div>
     </div>
 </div>
-</section>
+</div>
 <!-- Checkout Area End -->
 
 {% endblock %}
