--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -21,23 +21,19 @@
 </section>
 <!-- Breadcrumb part end-->
 <!-- Confirmation part start -->
-<section class="confirmation_part section_padding">
+<div class="confirmation_part section_padding">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
         <div class="confirmation_tittle">
-          <div>
-            <h6>Your order has been received.</h6>
+            <p class="h5">Your order has been received.</p>
             <p>A confirmation email will be sent to {{ order.email }}</p>
-          </div>
         </div>
         <hr>
       </div>
       <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
-          <div class="text-muted">
-            <h5>Your Order:</h5>
-          </div>
+            <p class="h5">Your Order:</p>
           <div class="row">
             <div class="col-7 offset-2">
               <p class="mb-1 mt-0 text-muted">Title</p>
@@ -80,9 +76,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-6">
-          <div class="text-muted">
-            <h5>Order Summary:</h5>
-          </div>
+            <p class="h5 pb-3">Order Summary:</p>
           <div class="single_confirmation_details">
             <ul>
               <li>
@@ -130,6 +124,6 @@
       </div>
     </div>
   </div>
-</section>
+</div>
 <!-- Confirmation part end -->
 {% endblock %}
