--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
-                    <h2>Product Management</h2>
+                    <h2 class="text-white">Product Management</h2>
                 </div>
             </div>
         </div>
@@ -17,11 +17,11 @@
 </section>
 <!-- Breadcrumb part end -->
 <!-- Checkout Area Start -->
-<section class="cart_area section_padding">
+<div class="cart_area section_padding">
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6 order-lg-last mb-5">
-                <h2 class="mt-20 text-white">Update a painting</h2>
+                <div class="mt-20 form-titel-text">Update a painting</div>
                 <hr>
             </div>
         </div>
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-</section>
+</div>
 <!-- End Checkout Area -->
 {% endblock %}
 
