--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -22,13 +22,11 @@
 </section>
 <!-- Breadcrumb part end-->
 <!-- Profile Form start -->
-<section class="cart_area section_padding">
+<div class="cart_area section_padding">
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-5 order-lg-last mb-5">
-                <p class="text-muted">
-                    <div class="form-titel-text">Your Profile:</div>
-                </p>
+                <p class="h5 mb-3">Your Profile:</p>
                 <form action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
@@ -39,9 +37,7 @@
                 </form>
             </div>
             <div class="col-12 col-lg-7 order-lg-last mb-5">
-                <p class="text-muted">
-                    <div class="form-titel-text">Order History:</div>
-                </p>
+                <p class="h5 mb-3">Order History:</p>
                 <div class="order-history table-responsive ml-2">
                     <table class="table table-sm table-borderless table-hover">
                         <thead>
@@ -78,11 +74,11 @@
             </div>
         </div>
     </div>
-</section>
+</div>
 <!-- Profile Form End -->
 {% endblock %}
 
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+    <script src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
