--- a/home/templates/home/privacy_policy.html
+++ b/home/templates/home/privacy_policy.html
@@ -28,7 +28,7 @@
                             <div class="card">
                                 <div class="card-header" id="headingOne">
                                     <h3 class="mb-0">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse"
+                                        <button class="btn btn-link text-left" type="button" data-toggle="collapse"
                                             data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                             Interpretation and Definitions <i class="fa-solid fa-angles-down pl-3"></i>
                                         </button>
@@ -140,7 +140,7 @@
                             <div class="card">
                                 <div class="card-header" id="headingTwo">
                                     <h3 class="mb-0">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse"
+                                        <button class="btn btn-link text-left" type="button" data-toggle="collapse"
                                             data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                                             Collecting and Using Your Personal Data <i
                                                 class="fa-solid fa-angles-down pl-3"></i>
@@ -506,7 +506,7 @@
                             <div class="card">
                                 <div class="card-header" id="headingThree">
                                     <h3 class="mb-0">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse"
+                                        <button class="btn btn-link text-left" type="button" data-toggle="collapse"
                                             data-target="#collapseThree" aria-expanded="true"
                                             aria-controls="collapseThree">
                                             Children's Privacy <i class="fa-solid fa-angles-down pl-3"></i>
@@ -541,7 +541,7 @@
                             <div class="card">
                                 <div class="card-header" id="headingFour">
                                     <h3 class="mb-0">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse"
+                                        <button class="btn btn-link text-left" type="button" data-toggle="collapse"
                                             data-target="#collapseFour" aria-expanded="true"
                                             aria-controls="collapseFour">
                                             Links to Other Websites <i class="fa-solid fa-angles-down pl-3"></i>
@@ -568,7 +568,7 @@
                             <div class="card">
                                 <div class="card-header" id="headingFive">
                                     <h3 class="mb-0">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse"
+                                        <button class="btn btn-link text-left" type="button" data-toggle="collapse"
                                             data-target="#collapseFive" aria-expanded="true"
                                             aria-controls="collapseFive">
                                             Changes to this Privacy Policy <i class="fa-solid fa-angles-down pl-3"></i>
@@ -598,7 +598,7 @@
                             <!-- Collapsable section End -->
                             <hr>
                             <h3>Contact Us</h3>
-                            <p>If you have any questions about this Privacy Policy, You can contact us:</p>
+                            <p>If you have any questions about this Privacy Policy, please contact us:</p>
                             <ul class="unordered-list">
                                 <li>By email: claudiavomwalde@gmail.com</li>
                             </ul>                     
