--- a/home/templates/home/reviews.html
+++ b/home/templates/home/reviews.html
@@ -25,7 +25,7 @@
 <div class="container p-3 mt-2">
   <div class="col">
     {% if user.is_anonymous %}
-    <div class="review_heading">Please <a href="{% url 'account_login' %}"><strong>log in</strong></a> to add a review.
+    <div class="review_heading">Please <a href="{% url 'account_login' %}?next=/reviews/" aria-label="login"><strong>log in</strong></a> to add a review.
     </div>
     {% endif %}
     {% if request.user.is_authenticated %}
