--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -146,7 +146,7 @@
         </div>
     </div>
     <div class="back-to-top" data-toggle="tooltip" data-original-title="Back to Top">
-        <a class="btt-link h-100" aria-label="Back to Top" href="{% url 'products' %}" onclick="javascript:scrollTo(0, 0)">
+        <a class="btt-link h-100" aria-label="Back to Top" href="" onclick="javascript:scrollTo(0, 0)">
             <i class="fa-regular fa-circle-up"></i>
         </a>
     </div>
