Correct color change settings in character count js on contact us textarea form field

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -105,8 +105,7 @@
               <a class="btn_1 checkout_btn_1 text-white ml-2 float-right" href="{% url 'checkout' %}"
                 aria-label="Proceed to checkout">Proceed to checkout</a>
               <a class="btn_1 text-white float-right" href="{% url 'products' %}"
-                aria-label="Continue shopping">Continue
-                Shopping</a>
+                aria-label="Continue shopping">Back to Gallery</a>
             </div>
           </div>
           {% else %}
