--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -88,7 +88,7 @@
             id="id_qty_{{ product.id }}">
           <input type="submit" class="btn_1 m-2" aria-label="Add to shopping cart" value="Add to cart">
           <a href="{% url 'products' %}" class="btn_1 text-white m-2" role="button"
-            aria-label="Continue Shopping">Continue shopping</a>
+            aria-label="Continue Shopping">Back to Gallery</a>
           <input type="hidden" name="redirect_url" value="{{ request.path }}">
         </div>
       </form>
