--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -49,7 +49,7 @@
           <span class="toast-icon">
             <i class="fa-solid fa-cart-shopping mr-2 text-white"></i>
           </span>
-          <span class="text-uppercase">Continue Shopping</span>
+          <span class="text-uppercase">Back to Gallery</span>
         </a>
       </div>
     </div>
