Set toast background to white for better text readability on small screens

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -14,7 +14,7 @@
                         <p>Why don't you check out one of the other paintings in the meantime!</p>
                         <p></p>
                         <p>Error 404 - Page not found</p>
-                        <a href="{% url 'products' %}" class="btn_1">All paintings</a>
+                        <a href="{% url 'products' %}" class="btn_1 text-white">All paintings</a>
                     </div>
                 </div>
             </div>
