--- a/static/css/base.css
+++ b/static/css/base.css
@@ -315,6 +315,7 @@ i {
     font-family: "Rubik", sans-serif;
     font-size: 14px;
     color: #4B3049;
+    background-color: #fff;
 }
 .toast-border {
     border-radius: 20px;
