Update color for h5 headings in privacy policy for better accessibility score in lighthouse

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -56,7 +56,7 @@
                     <div class="product_count">
                       <div class="quantity-remove" data-toggle="tooltip" data-original-title="Remove">
                         <a class="quantity" aria-label="Quantity" id="quantity">{{ item.quantity }}</a>
-                        <a class="remove-item" aria-label="Remove" id="remove_{{ item.item_id }}">
+                        <a class="remove-item" id="remove_{{ item.item_id }}">
                           <i class="fa-solid fa-trash pl-2"></i>
                         </a>
                       </div>
