--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -26,14 +26,14 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="confirmation_tittle">
-            <p class="h5">Your order has been received.</p>
-            <p>A confirmation email will be sent to {{ order.email }}</p>
+          <p class="h5">Your order has been received.</p>
+          <p>A confirmation email will be sent to {{ order.email }}</p>
         </div>
         <hr>
       </div>
       <div class="row">
         <div class="col-12 col-lg-6 order-lg-last mb-5">
-            <p class="h5">Your Order:</p>
+          <p class="h5">Your Order:</p>
           <div class="row">
             <div class="col-7 offset-2">
               <p class="mb-1 mt-0 text-muted">Title</p>
@@ -76,38 +76,46 @@
           </div>
         </div>
         <div class="col-12 col-lg-6">
-            <p class="h5 pb-3">Order Summary:</p>
+          <p class="h5 pb-3">Order Summary:</p>
           <div class="single_confirmation_details">
             <ul>
               <li>
-                <span class="mb-1 mt-0 small text-muted w-25">Order Number:</span><span class="w-75"> {{ order.order_number|truncatechars:6 }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Order Number:</span><span class="w-75">
+                  {{ order.order_number|truncatechars:6 }}</span>
               </li>
               <li>
-                <span class="mb-1 mt-0 small text-muted w-25">Order Date:</span><span class="w-75"> {{ order.date }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Order Date:</span><span class="w-75">
+                  {{ order.date }}</span>
               </li>
 
               <li>
-                <span class="mb-1 mt-0 small text-muted w-25">Name:</span><span class="w-75"> {{ order.full_name }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Name:</span><span class="w-75">
+                  {{ order.full_name }}</span>
               </li>
               <li>
-                <span class="mb-1 mt-0 small text-muted w-25">Phone Number:</span><span class="w-75"> {{ order.phone_number }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Phone Number:</span><span class="w-75">
+                  {{ order.phone_number }}</span>
               </li>
               <li>
-                <span class="mb-1 mt-0 small text-muted w-25">Street:</span><span class="w-75"> {{ order.street_address1 }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Street:</span><span class="w-75">
+                  {{ order.street_address1 }}</span>
               </li>
               {% if order.street_address2 %}
               <li>
-                <span class="mb-1 mt-0 small text-muted w-25">Street:</span><span class="w-75"> {{ order.street_address2 }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Street:</span><span class="w-75">
+                  {{ order.street_address2 }}</span>
               </li>
               {% endif %}
               <li>
-                <span class="mb-1 mt-0 small text-muted w-25">Postcode:</span><span class="w-75"> {{ order.postcode }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Postcode:</span><span class="w-75">
+                  {{ order.postcode }}</span>
               </li>
               <li>
                 <span class="mb-1 mt-0 small text-muted w-25">Town:</span><span class="w-75"> {{ order.town }}</span>
               </li>
               <li>
-                <span class="mb-1 mt-0 small text-muted w-25">Country:</span><span class="w-75"> {{ order.country }}</span>
+                <span class="mb-1 mt-0 small text-muted w-25">Country:</span><span class="w-75">
+                  {{ order.country }}</span>
               </li>
             </ul>
           </div>
