--- a/static/css/base.css
+++ b/static/css/base.css
@@ -455,6 +455,9 @@ h5 {
 }
 .typography h5 {
     padding-left: 10px;
+    color: #795376 !important;
+    font-weight: 600 !important;
+    margin-top: 20px !important;
 }
 .card-header {
     border: 1px solid #795376 !important;
