Update Readme file, upload new screenshots

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -49,7 +49,7 @@
             <div class="row justify-content-between">
                 <div class="col-12 col-md-4">
                     <div>
-                        <p class="text-uppercase font-weight-bold">Hanneles Art</p>
+                        <p class="text-uppercase font-weight-bold mt-3">Hanneles Art</p>
                         <p>Gallery & Academy</p>
                         <p>Tavlavägen 123</p>
                         <p>SE-123 45 Gävle</p>
@@ -57,19 +57,21 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div>
-                        <p class="text-uppercase font-weight-bold">Contact us</p>
+                        <p class="text-uppercase font-weight-bold mt-3">Contact us</p>
                         <p><i class="fa-solid fa-phone fa-lg pr-2"></i>076-555 00 007</p>
                         <p><i class="fa-regular fa-envelope fa-lg pr-2"></i>info@hanneles.com</p>
-                        <p><a href="{% url 'contact' %}" aria-label="Contact us"><i class="fa-solid fa-at fa-lg pr-2"></i>Contact form</a></p>
+                        <p><a href="{% url 'contact' %}" aria-label="Contact us"><i
+                                    class="fa-solid fa-at fa-lg pr-2"></i>Contact us</a></p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <div>
-                        <p class="text-uppercase font-weight-bold">Follow us</p>
+                        <p class="text-uppercase font-weight-bold mt-3">Follow us</p>
                         <p><a href="https://www.facebook.com/61555624246656/" aria-label="Visit us on Facebook"
-                            target="_blank" rel="noopener"><i class="fab fa-facebook-f fa-lg pr-2"></i>Facebook</a></p>
+                                target="_blank" rel="noopener"><i class="fab fa-facebook-f fa-lg pr-2"></i>Facebook</a>
+                        </p>
                         <p><a href="https://www.instagram.com/" aria-label="Visit us on Instagram" target="_blank"
-                            rel="noopener"><i class="fab fa-instagram fa-lg pr-2"></i>Instagram</a></p>
+                                rel="noopener"><i class="fab fa-instagram fa-lg pr-2"></i>Instagram</a></p>
                     </div>
                 </div>
             </div>
@@ -83,7 +85,8 @@
                         <P id="ccright">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             <script>
-                                document.getElementById("ccright").innerHTML="Copyright &copy; " + new Date().getFullYear();
+                                document.getElementById("ccright").innerHTML = "Copyright &copy; " + new Date()
+                                    .getFullYear();
                             </script> All rights reserved | This template is made with <i class="ti-heart"
                                 aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"
                                 rel="noopener">Colorlib</a>
