Correct typos and phrases in readme

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -315,7 +315,7 @@ i {
     font-family: "Rubik", sans-serif;
     font-size: 14px;
     color: #4B3049;
-    background-color: #fff;
+    background-color: #ede5ed !important;
 }
 .toast-border {
     border-radius: 20px;
