--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -13,40 +13,7 @@
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
 
-  <div id="div_id_email" class="form-group"> <label for="id_email" class=" requiredField">
-    Email<span class="asteriskField">*</span> </label>
-    <div> <input type="email" name="email" placeholder="Email address" autocomplete="email" maxlength="320"
-        class="textinput textInput form-control" required id="id_email"> </div>
-    </div>
-    <div id="div_id_email2" class="form-group"> <label for="id_email2" class=" requiredField">
-        Email (again)<span class="asteriskField">*</span> </label>
-      <div> <input type="email" name="email2" placeholder="Email address confirmation" maxlength="320"
-          class="textinput textInput form-control" required id="id_email2"> </div>
-    </div>
-    <div id="div_id_username" class="form-group"> <label for="id_username" class=" requiredField">
-        Username<span class="asteriskField">*</span> </label>
-      <div> <input type="text" name="username" placeholder="Username" autocomplete="username" minlength="4"
-          maxlength="150" class="textinput textInput form-control" required id="id_username"> </div>
-    </div>
-    <div id="div_id_password1" class="form-group"> <label for="id_password1" class=" requiredField">
-        Password<span class="asteriskField">*</span> </label>
-      <div> <input type="password" name="password1" placeholder="Password" autocomplete="new-password"
-          class="textinput textInput form-control" required id="id_password1">
-        <div id="hint_id_password1" class="form-text text-muted mt-2">
-          <p>Please note:</p>
-          <ul>
-            <li>Your password can’t be too similar to your other personal information.</li>
-            <li>Your password must contain at least 8 characters.</li>
-            <li>Your password can’t be a commonly used password.</li>
-            <li>Your password can’t be entirely numeric.</li>
-          </ul></div>
-        </div>
-      </div>
-      <div id="div_id_password2" class="form-group"> <label for="id_password2" class=" requiredField">
-          Password (re-type)<span class="asteriskField">*</span> </label>
-        <div> <input type="password" name="password2" placeholder="Password (re-type)" autocomplete="new-password"
-            class="textinput textInput form-control" required id="id_password2"> </div>
-      </div>
+  {% form|crispy%}
   
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
