--- a/static/css/base.css
+++ b/static/css/base.css
@@ -170,6 +170,9 @@ a:hover {
     display: block;
     text-align: center;
 }
+.dropdown-menu.show {
+    transform: translate3d(0px, 42px, 0px) !important;
+}
 .genric-btn.primary {
     font-size: 1em;
     font-weight: 400;
